# api/server.go
@@ -91,6 +91,7 @@ func StartAPI() {
 	api := app.Group("/api/v1")
 	api.Get("/history", JWTProtected(), FindHistory)
 	api.Post("/history", JWTProtected(), FindHistoryPost)
+	api.Get("/history/:id", JWTProtected(), GetHistoryDetail)
 	api.Get("/issues", JWTProtected(), FindIssues)
 	api.Get("/issues/grouped", JWTProtected(), FindIssuesGrouped)
 	api.Get("/issues/:id", JWTProtected(), GetIssueDetail)
@@ -107,6 +108,8 @@ func StartAPI() {
 	api.Put("/workspaces/:id", JWTProtected(), UpdateWorkspace)
 	api.Get("/interactions", JWTProtected(), FindInteractions)
 	api.Get("/interactions/:id", JWTProtected(), GetInteractionDetail)
+	api.Post("/oob-tests", JWTProtected(), FindOOBTests)
+	api.Get("/oob-tests/:id", JWTProtected(), GetOOBTestDetail)
 	api.Get("/tasks", JWTProtected(), FindTasks)
 	api.Get("/tasks/jobs", JWTProtected(), FindTaskJobs)
 	api.Post("/tokens/jwts", JWTProtected(), JwtListHandler)
